# pytest-scenario-files

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  LICENSE  README.md  create-ai-skill-prompt.md  pyproject.toml  sbom.cdx.json
.github/workflows/: publish-release.yml  publish-sphinx.yml
docs/: conf.py  index.rst
docs/source/: about.rst  advanced_usage.rst  api.rst  basic_usage.rst  conf.py  contributing.rst  index.rst  installation.rst  real_world_example.rst  requirements.txt  responses_integration.rst  respx_integration.rst
docs/source/_templates/sidebar/: ethical-ads.html
docs/source/example_files/src/: apis.py  get_oauth_token.py
docs/source/example_files/tests/unit_tests/: conftest.py  test_apis.py  test_oauth.py
docs/source/example_files/tests/unit_tests/test_data/: data_api_1.yaml  data_api_2_success_1.yaml  data_get_oauth_token.yaml  data_retrieve_secret.yaml
docs/source/real_world_example/: api.rst  oauth.rst  testing_api.rst  testing_oauth.rst
pytest-scenario-files-skill/: SKILL.md
pytest-scenario-files-skill-old/: SKILL.md
pytest-scenario-files-skill-old/references/: responses_integration.md
pytest-scenario-files-skill/references/: advanced_usage.md  api.md  basic_usage.md  responses_integration.md  respx_integration.md
src/pytest_parameterize_from_files/: __init__.py  plugin.py  pytest_parameterize_from_files.py
src/pytest_scenario_files/: __init__.py  plugin.py
tests/: conftest.py  test_basic_plugin_functions.py  test_help_message.py  test_ignore_multi_files.py  test_load_file_extended_name.py  test_load_multi_files.py  test_load_multi_values.py  test_load_one_file.py  test_merge_multi_fixtures.py  test_parameterize_from_files.py  test_plugin_load.py
tests/Responses_example/: api_connection.py  common_test_data.yaml  data_connect_to_api.yaml  data_get_domain_id.yaml  data_get_tenant_id.yaml  data_login_to_api.yaml  data_set_tenant_and_domain.yaml  example_test_api_connection.py  test_api_connection.py  test_responses_example.py
tests/basic cases/failure cases/: test_data_file_not_dict.py  test_no_data_files_found.py
tests/basic cases/success cases/: test_ignore_multi_files.py  test_load_by_reference.py  test_load_multi_files.py  test_load_one_file.py  test_load_separate_subdirs.py  test_load_subdirs.py  test_other_dir_load_by_reference.py
tests/failure cases/: test_conflicting_options.py  test_data_file_not_dict.py  test_data_file_wrong_ext.py  test_fixture_merge_conflict.py  test_fixture_mismatch.py  test_load_responses_failure.py  test_no_data_files_found.py  test_responses_fixture_data_not_dict_or_list.py  test_test_case_not_dict.py
tests/pytester_example_files/: data_data_file_not_dict_tester.yaml  data_data_file_wrong_ext_tester.txt  data_fixture_merge_conflict_tester_1.yaml  data_fixture_merge_conflict_tester_2.yaml  data_fixture_mismatch_tester_1.yaml  data_fixture_mismatch_tester_2.yaml  data_load_by_reference_tester.yaml  data_load_indirect_fixture_tester_1.yaml  data_load_multi_files_tester_2.json  data_load_multi_files_tester_3.yaml  data_load_multi_values_tester.yaml  data_load_one_file_tester.json  data_load_one_tester_1.json  data_load_one_tester_1.yaml  data_load_responses_fixture_empty_tester_1.yaml  data_load_responses_fixture_multiple_tester_1.yaml  data_load_responses_fixture_partial_tester_1.yaml  data_load_responses_fixture_single_tester_1.yaml  data_load_responses_fixture_tester_1.yaml  data_load_respx_fixture_multiple_tester_1.yaml  data_load_respx_fixture_sequential_response_tester_1.yaml  data_load_respx_fixture_single_tester_1.yaml  data_load_respx_fixture_update_response_tester_1.yaml  data_load_subdirs_tester_2.json  data_merge_multi_fixtures_tester_2.json  data_merge_multi_fixtures_tester_3.yaml  data_native_responses_failure_tester_bad_filename.yaml  data_native_responses_failure_tester_duplicate_files.yaml  data_native_responses_load_tester.yaml  data_psf_response_not_in_datafile_tester.yaml  data_responses_fixture_data_not_dict_or_list_tester_1.yaml  data_respx_assert_all_called_flag_tester_1.yaml  data_respx_assert_all_mocked_flag_tester_1.yaml  data_test_case_not_dict_tester.yaml  example_test_data_file_not_dict_tester.py  example_test_data_file_wrong_ext_tester.py  example_test_fixture_merge_conflict_tester.py  example_test_fixture_mismatch_tester.py  example_test_ignore_multi_files_tester.py  example_test_load_by_reference_tester.py  (+29 more)
tests/responses integration/: test_load_responses_fixture.py  test_responses_fixture_data_not_dict_or_list.py
tests/success cases/: test_load_by_reference.py  test_load_file_extended_name.py  test_load_indirect_fixture.py  test_load_multi_values.py  test_load_one_file.py  test_load_pytest_httpx_fixture.py  test_load_responses_fixture.py  test_load_respx_fixture.py  test_load_separate_subdirs.py  test_load_subdirs.py  test_merge_multi_fixtures.py  test_other_dir_load_by_reference.py  test_psf_response_not_in_datafile.py  test_psf_response_not_present.py
